--- a/pom.xml
+++ b/pom.xml
@@ -2,25 +2,29 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
+
     <parent>
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-starter-parent</artifactId>
         <version>2.7.2</version>
         <relativePath/> <!-- lookup parent from repository -->
     </parent>
+
     <groupId>com.homeapp.one</groupId>
     <artifactId>demo</artifactId>
     <version>0.0.1-SNAPSHOT</version>
-    <name>Home App attempt one</name>
-    <description>Demo project for Spring Boot</description>
+    <name>Nonsense - Back End</name>
+    <description>Spring Boot Project to support Nonsense</description>
+
     <properties>
         <java.version>18</java.version>
     </properties>
+
     <dependencies>
         <dependency>
             <groupId>org.jsoup</groupId>
             <artifactId>jsoup</artifactId>
-            <version>1.15.4</version>
+            <version>1.15.2</version>
         </dependency>
         <dependency>
             <groupId>org.springframework.boot</groupId>
@@ -60,8 +64,6 @@
             <artifactId>jstl</artifactId>
             <version>1.1.2</version>
         </dependency>
-
-
     </dependencies>
 
     <build>
@@ -72,5 +74,4 @@
             </plugin>
         </plugins>
     </build>
-
 </project>
