Replace Spring Boot banner

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,3 +8,5 @@ server.servlet.session.timeout=15m
 
 # DevTools
 spring.devtools.livereload.enabled=true
+#Banner
+spring.banner.location=classpath:Banner.txt
